--- a/app/src/main/res/layout/activity_trang_chu.xml
+++ b/app/src/main/res/layout/activity_trang_chu.xml
@@ -129,7 +129,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorWhite">
+        android:background="@color/colorWhite"
+        android:choiceMode="singleChoice"
+        android:groupIndicator="@null">
 
     </ExpandableListView>
 
