--- a/app/src/main/res/layout/activity_trang_chu.xml
+++ b/app/src/main/res/layout/activity_trang_chu.xml
@@ -47,23 +47,20 @@
 
                         <Button
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="start"
                             android:layout_weight="1"
-                            android:background="@color/colorWhite"
+                            android:background="@drawable/selector_bg_search"
                             android:drawableLeft="@drawable/ic_search_black_24dp"
                             android:paddingLeft="10dp"
                             android:text="Tìm Kiếm Trên Lazada"
                             android:textAlignment="textStart"
                             android:textAllCaps="false"
-
                             android:textColor="@color/colorGray" />
 
                         <View
                             android:layout_width="1dp"
                             android:layout_height="match_parent"
-                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginBottom="10dp"
                             android:background="@color/bgToolbar" />
@@ -73,7 +70,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:background="@color/colorWhite"
+                            android:background="@drawable/selector_bg_search"
                             android:padding="10dp"
                             android:src="@drawable/ic_photo_camera_black_24dp" />
 
