custom ẩn hiện password

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,5 +25,9 @@
         <item name="color">@color/colorWhite</item>
     </style>
 
+    <declare-styleable name="PasswordEditText">
+        <attr name="useStrike" format="boolean" />
+    </declare-styleable>
+
 
 </resources>
