--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorGray">#CCC</color>
     <color name="colorFacebook">#4a6ea9</color>
     <color name="colorGoogle">#da4835</color>
+    <color name="colorBlack">#000</color>
+
 </resources>
