--- a/app/src/main/res/layout/layout_fragment_dang_nhap.xml
+++ b/app/src/main/res/layout/layout_fragment_dang_nhap.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
 
-        <EditText
+        <com.example.applazada.CustomView.ClearEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Địa chỉ Email"
