--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,8 @@
 
     <declare-styleable name="PasswordEditText">
         <attr name="useStrike" format="boolean" />
+        <attr name="useValidate" format="boolean" />
+
     </declare-styleable>
 
 
