--- a/app/src/main/res/layout/layout_fragment_dang_ky.xml
+++ b/app/src/main/res/layout/layout_fragment_dang_ky.xml
@@ -28,12 +28,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
 
+
             <EditText
-                android:textColor="@color/colorBlack"
                 android:id="@+id/edtHoTenDangKy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Họ tên đầy đủ" />
+                android:hint="Họ tên đầy đủ"
+                android:textColor="@color/colorBlack" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -45,11 +46,11 @@
             android:layout_margin="10dp">
 
             <EditText
-                android:textColor="@color/colorBlack"
                 android:id="@+id/edtEmailDangKy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Địa chỉ Email" />
+                android:hint="Địa chỉ Email"
+                android:textColor="@color/colorBlack" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -67,8 +68,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Mật khẩu"
                 android:textColor="@color/colorBlack"
-                app:useValidate="true"
-                app:useStrike="true" />
+                app:useStrike="true"
+                app:useValidate="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -89,10 +90,12 @@
                 android:layout_height="wrap_content"
                 android:hint="Nhập lại mật khẩu"
                 android:textColor="@color/colorBlack"
-                app:useStrike="true" />
+                app:useStrike="true"
+                app:useValidate="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/sEmailDocQuyen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -101,7 +104,7 @@
 
 
         <Button
-            android:id="@+id/btnDanKy"
+            android:id="@+id/btnDangKy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
