--- a/app/src/main/res/layout/custom_layout_recycler_thuonghieulon.xml
+++ b/app/src/main/res/layout/custom_layout_recycler_thuonghieulon.xml
@@ -37,7 +37,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerInside" />
         </LinearLayout>
     </FrameLayout>
 
