--- a/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
+++ b/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
@@ -1,31 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/imgHinhDienThoaiMayTinhBang"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
-
-    <TextView
-        android:id="@+id/txtTieuDeTopDienThoaiDienTu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/txtGiaDienTu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/txtGiamGiaDienTu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+    android:layout_margin="5dp"
+    android:background="@color/colorGray">
 
 
-</LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progress_bar_TopDienTu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <LinearLayout
+            android:layout_width="160dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imgHinhDienThoaiMayTinhBang"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:padding="5dp"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:id="@+id/txtTieuDeTopDienThoaiDienTu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Tên Sản Phẩm"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtGiaDienTu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Giá tiền"
+                android:textColor="@color/colorRed" />
+
+            <TextView
+                android:id="@+id/txtGiamGiaDienTu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+</androidx.cardview.widget.CardView>
