thêm sản phẩm của phụ kiện và tiện ích cho trang điện tử

--- a/app/src/main/res/layout/custom_layout_recycler_thuonghieulon.xml
+++ b/app/src/main/res/layout/custom_layout_recycler_thuonghieulon.xml
@@ -30,7 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
-                android:text="OPPO" />
+                android:text="OPPO"
+                android:textAlignment="center" />
 
             <ImageView
                 android:id="@+id/imgHinhThuongHieuLonDienTu"
