--- a/app/src/main/res/layout/custom_layout_recyclerview_dientu.xml
+++ b/app/src/main/res/layout/custom_layout_recyclerview_dientu.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/colorGray"
     android:orientation="vertical">
 
@@ -15,6 +15,8 @@
         android:src="@drawable/backgroundplashscreen" />
 
     <TextView
+        android:textStyle="bold"
+        android:id="@+id/txtTenSanPhamNoiBat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -30,6 +32,8 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
+        android:textStyle="bold"
+        android:id="@+id/TenTopSanPhamNoiBat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
