--- a/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
+++ b/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
@@ -34,6 +34,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="Tên Sản Phẩm"
                 android:textStyle="bold" />
 
@@ -42,7 +44,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+
                 android:text="Giá tiền"
+                android:textAlignment="center"
                 android:textColor="@color/colorRed" />
 
             <TextView
@@ -50,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-
+                android:textAlignment="center"
                 android:visibility="gone" />
 
         </LinearLayout>
