load danh sách Top thương hiệu lớn và sản phẩm mới về

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorGoogle">#da4835</color>
     <color name="colorBlack">#000</color>
     <color name="colorRed">#E30000</color>
+    <color name="tranparentBlack">#B2000000</color>
 </resources>
