custom trang giao diện hiển thị sản phẩm theo danh mục

--- a/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
+++ b/app/src/main/res/layout/custom_layout_topdienthoaivamaytinhbang.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_margin="5dp"
-    android:background="@color/colorGray">
+    android:background="@color/colorGray"
+    android:gravity="center">
 
 
     <FrameLayout
@@ -17,7 +19,7 @@
             android:layout_gravity="center" />
 
         <LinearLayout
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="5dp">
@@ -35,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:ellipsize="end"
+                android:maxLength="20"
                 android:maxLines="2"
                 android:text="Tên Sản Phẩm"
                 android:textStyle="bold" />
