hiển thị thông số kỹ thuật của sản phẩm

--- a/app/src/main/res/layout/activity_hien_thi_san_pham_theo_danh_muc.xml
+++ b/app/src/main/res/layout/activity_hien_thi_san_pham_theo_danh_muc.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
+            app:theme="@style/menuitemcolor"
             android:id="@+id/toolbarHienThiSP"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
