--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -16,7 +16,8 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title=" ">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,6 +37,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/txtTenSanPham"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -44,6 +46,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/txtGiaTien"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="100000 VND"
@@ -52,10 +55,12 @@
                     android:textStyle="bold" />
 
                 <RatingBar
+                    android:id="@+id/rbDanhGia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleX="0.5"
                     android:scaleY="0.5"
+                    android:theme="@style/DoiMauNgoiSaoRatingBar"
                     android:transformPivotX="0dp"
                     android:transformPivotY="0dp" />
 
@@ -65,27 +70,54 @@
                     android:layout_height="300dp"
                     android:src="@drawable/backgroundplashscreen" />
 
-                <LinearLayout
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:id="@+id/layoutdot"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                </LinearLayout>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/layoutdot"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        android:orientation="horizontal">
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_share_black_24dp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_favorite_border_black_24dp" />
+
+
+                    </LinearLayout>
+                </FrameLayout>
 
 
             </LinearLayout>
 
 
             <androidx.appcompat.widget.Toolbar
-
                 android:id="@+id/toolbarChiTietSP"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/bgToolbar"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"
+                app:theme="@style/menuitemcolor" />
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -93,9 +125,9 @@
 
 
     <androidx.core.widget.NestedScrollView
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,16 +136,14 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:padding="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
                     android:background="@color/colorGray" />
 
                 <TextView
@@ -129,11 +159,11 @@
             <!--Layout phần đóng gói-->
 
             <LinearLayout
-                android:padding="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -191,27 +221,55 @@
             </LinearLayout>
             <!--Layout phần chi tiết sản phẩm-->
             <LinearLayout
-                android:padding="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:background="@color/colorWhite"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Chi tiết sản phẩm" />
+                    android:text="Chi tiết sản phẩm"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtThongTinChiTiet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/lnThongSoKyThuat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:text="Thông Số Kỹ Thuật"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imgxemthemchitiet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
+
 
             </LinearLayout>
             <!--Layout phần đánh giá-->
             <LinearLayout
-                android:padding="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:background="@color/colorWhite"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -240,12 +298,12 @@
             </LinearLayout>
             <!--Layout phần bạn sẽ thích-->
             <LinearLayout
-                android:padding="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:background="@color/colorWhite"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
